Two more cases to show they work